Adjusted the pile= and pilegroup= query parameters in the API to match against the pile and pilegroup slugs, since those are winding up being the unique identifiers we use in the front-end code.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@183 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plants.html
+++ b/gobotany/simplekey/templates/simplekey/plants.html
@@ -1,3 +1,9 @@
 <div id="plants">
-(### matching plants, then images)
+  <p class="species_count">
+    <span class="loading">Loading…</span>
+    <span class="count">391 species</span>
+  </p>
+  <p>
+    Someday, put images here
+  </p>
 </div>
