--- a/gobotany/core/templates/base.html
+++ b/gobotany/core/templates/base.html
@@ -15,16 +15,16 @@
            },
        };
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
 
     {% block js %}{% endblock %}
 
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css" type="text/css" media="screen" title="Dijit Tundra Style" charset="utf-8"> 
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css" type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8"> 
 
     <link rel="stylesheet" href="/static/style.css" />
   </head>
 
-  <body class="tundra">
+  <body class="claro">
     <div id="content">
       {% block content %}{% endblock %}
     </div>
