Now uses Claro theme instead of Tundra
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@192 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -6,11 +6,11 @@
 
     <!-- do we want this? -->
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css">
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/tundra/tundra.css" type="text/css" media="screen" title="Dijit Tundra Style" charset="utf-8"> 
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css" type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8"> 
     <link rel="stylesheet" href="/static/gobotany.css" />
 
   </head>
-  <body class="tundra">
+  <body class="claro">
     <div id="content">
       {% include "simplekey/header.html" %}
       <p>Plant Identifier</p>
