CSS tweaks following the Claro change to restore larger font size, esp. for around the filters. Overrode a few Claro styles that affect regular HTML elements. Move reset.css to the top of the style links. Set base template on index page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@197 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,5 +1,6 @@
-<html>
-  <body>
+{% extends "simplekey/base.html" %}
+{% block content %}
+    <h1>Simple Key</h1>
     <p>
       Welcome to the simple key Django app.
     </p>
@@ -9,5 +10,4 @@
     <p>
       <a href="1/">Start identifying!</a>
     </p>
-  </body>
-</html>
+{% endblock %}
