Work done to separate debug and non-debug setup of dojo and to also enable the test harness
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@198 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -10,5 +10,13 @@
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
       <li><a href="simple/">Simple Key app</a></li>
+      <li id="tests-action">Run Tests (please run in dojo debug mode)</li>
     </ul>
+
+    <script type="text/javascript">
+      if (djConfig && djConfig.isDebug) {
+          var node = document.getElementById('tests-action');
+          node.innerHTML = '<a href="/static/tests.html">Run Tests</a>';
+      }
+    </script>
 {% endblock %}
