--- a/gobotany/core/templates/base.html
+++ b/gobotany/core/templates/base.html
@@ -4,22 +4,10 @@
   <head>
     <title>{% block title %}Default{% endblock %}</title>
 
-    <script type="text/javascript">
-	djConfig = { 
-           isDebug: true,
-           debugAtAllCosts:true,
-           useXDomain: false,
-           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/',
-           modulePaths: {
-               gobotany: '/static/gobotany'
-           },
-       };
-    </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
+    {% include "dojobase.html" %}
+
 
     {% block js %}{% endblock %}
-
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css" type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8"> 
 
     <link rel="stylesheet" href="/static/style.css" />
   </head>
