--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -10,7 +10,7 @@
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
       <li><a href="simple/">Simple Key app</a></li>
-      <li id="tests-action">Run Tests (please run in dojo debug mode)</li>
+      <li id="tests-action">Run Tests (please run in dojo debug mode, see the buildout README.txt for more details)</li>
     </ul>
 
     <script type="text/javascript">
