Taught the query API how to filter by the new Genus and Family objects, and wired up the family and genus forms in the API to do the queries.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@211 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -6,16 +6,16 @@
   <h1>{{ pilegroup.name }}: {{ pile.name }}</h1>
   <div id="main">
     <div id="global-filter">
-      <form>
+      <form id="family_form">
         <p>Family<br>
         <input type="text">
-        <input type="submit" value="Go">
+        <button>Go</button>
         </p>
       </form>
-      <form>
+      <form id="genus_form">
         <p>Genus<br>
         <input type="text">
-        <input type="submit" value="Go">
+        <button>Go</button>
         </p>
       </form>
     </div>
