Created a basic search page of our own, that uses our own template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@227 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -170,6 +170,21 @@ p {
     display: block;
 }
 
+/* Search page formatting */
+
+#search_results_list h4 {
+    font-style: italic;
+    font-weight: bold;
+}
+
+#search_results_list p {
+    margin-left: 2em;
+}
+
+#search_results_list .highlighted {
+    font-weight: bold;
+}
+
 /* Dijit Claro overrides */
 .claro {
     color: #000;
