Updated js code to use .hidden class instead of manually setting style.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@228 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plants.html
+++ b/gobotany/simplekey/templates/simplekey/plants.html
@@ -1,7 +1,7 @@
 <div id="plants">
   <p class="species_count">
-    <span class="loading">Loading…</span>
-    <span class="count">391 species</span>
+    <span class="loading">Calculating species…</span>
+    <span class="count hidden"><span class="number">391</span> species matched</span>
   </p>
   <p>
     Someday, put images here
