--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -27,7 +27,7 @@
         <li>
           <h4>{{ result.object.scientific_name }}</h4>
           <p>
-            {% highlight result.scientific_name with query %}
+            {% highlight result.text with query %}
           </p>
         </li>
       {% empty %}
