--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -171,17 +171,31 @@ p {
 
 /* Search page formatting */
 
+.search_navigation {
+    padding: 8px;
+    background-color: #eec;
+    color: #850;
+}
+
 #search_results_list h4 {
+    font-family: Helvetica;
+    font-size: 0.92em;
     font-style: italic;
     font-weight: bold;
 }
 
 #search_results_list p {
+    font-size: 0.88em;
     margin-left: 2em;
 }
 
-#search_results_list .highlighted {
+#search_results_list em {
+    font-style: normal;
     font-weight: bold;
+}
+
+#search_results_list .excerpt {
+    color: #070;
 }
 
 /* Dijit Claro overrides */
