--- a/gobotany/simplekey/templates/simplekey/header.html
+++ b/gobotany/simplekey/templates/simplekey/header.html
@@ -1,3 +1,6 @@
 <div id="head">
-(header/navigation)
+  (header/navigation)
+  <form id="headsearch" action="/simple/search/">
+    <input type="text" name="q"/><button >Search</button>
+  </form>
 </div>
