Add thumbnail support for content images with two default thumb sizes.  Implement plant listing with thumbnails.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@238 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plants.html
+++ b/gobotany/simplekey/templates/simplekey/plants.html
@@ -3,7 +3,6 @@
     <span class="loading">Calculating species…</span>
     <span class="count hidden"><span class="number">391</span> species matched</span>
   </p>
-  <p>
-    Someday, put images here
-  </p>
+  <ul id="plant-listing">
+  </ul>
 </div>
