--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -120,7 +120,8 @@ p {
 }
 
 #plants {
-    height: 300px;
+    height: 350px;
+    overflow: auto;
 }
 
 #plants .species_count {
@@ -132,6 +133,41 @@ p {
 }
 #plants .species_count .count {
     color: black;
+}
+
+#plant-listing li {
+    float: left;
+    margin: 0 10px 10px 0;
+    min-height: 150px;
+}
+
+#plant-listing li a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    width: 110px;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px #fff solid;
+}
+
+#plant-listing li a:hover {
+    border: 1px #ddd dashed;
+}
+
+#plant-listing .MissingImage {
+    display: block;
+    width: 110px;
+    height: 110px;
+    margin: 0 auto;
+}
+
+#plant-listing img, #plant-listing .MissingImage {
+    background-color: #CCCCCC;
+}
+
+#plant-listing .PlantTitle {
+    font-style: italic;
 }
 
 #subway ul li {
