Add fancy image loading on scroll
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@242 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -135,10 +135,20 @@ p {
     color: black;
 }
 
-#plant-listing li {
+ul#plant-listing {
+    overflow: hidden;
+    margin: 0;
+}
+
+#plant-listing .PlantScrollPage li {
     float: left;
     margin: 0 10px 10px 0;
     min-height: 150px;
+}
+
+#plant-listing li.PlantScollPage {
+    margin: 0;
+    text-align: center;
 }
 
 #plant-listing li a {
