Add link and working area (so far empty) for picking from among all filters.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@260 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -14,7 +14,10 @@
   <body class="claro">
     <div id="content">
       {% include "simplekey/header.html" %}
-      <p>Plant Identifier</p>
+      <div id="navlinks">
+        <p>Home | Plant of the Day | <a class="current">Plant Identifier</a> | 
+           Learning Opportunities</p>
+      </div>
       {% block content %}{% endblock %}
       {% include "simplekey/footer.html" %}
     </div>
