--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -21,6 +21,7 @@
       <div class="clear">&nbsp;</div>
     </div>
     {% include "simplekey/filter_working.html" %}
+    {% include "simplekey/pick_filters.html" %}
     {% include "simplekey/plants.html" %}
     <div id="subway">
       <h2>Subway map</h2>
