For the list of all filters, display dummy groups and characters in the working area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@264 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pick_filters.html
+++ b/gobotany/simplekey/templates/simplekey/pick_filters.html
@@ -3,7 +3,8 @@
   <h3 class="name">Pick Filters</h3>
   <form id="pick-filters-form">
     <div>
-        foo
+        <select size="10" multiple>
+        </select>
     </div>
   </form>
 </div>
