Filter listing now shows loading language.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@269 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -1,5 +1,6 @@
 <div id="filters" aria-live="polite" aria-relevant="additions removals">
   <p>Narrow your results by making selections below.</p>
+  <div class="loading">Loading filters…</div>
   <ul>
   </ul>
 </div>
