Mocked up what my little input boxes will look like for Bud, Leaf, Bark.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@274 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -41,12 +41,16 @@ p {
     width: 200px;
 }
 
-#filters p {
+#more_filters {
     border-bottom: 1px solid #ccc;
     font-size: 0.65em;
     line-height: 1.4em;
     margin: 0;
     padding: 1em;
+}
+
+#more_filters label {
+    display: block;
 }
 
 #filters ul {
