--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -1,5 +1,22 @@
 <div id="filters" aria-live="polite" aria-relevant="additions removals">
-  <p>Narrow your results by making selections below.</p>
+  <div id="more_filters">
+    Narrow your results by making selections below.
+    <form>
+      <label for="leaf">
+        <input type="checkbox" name="leaf" value="leaf" />
+        Leaf
+      </label>
+      <label for="leaf">
+        <input type="checkbox" name="leaf" value="leaf" />
+        Leaf
+      </label>
+      <label for="leaf">
+        <input type="checkbox" name="leaf" value="leaf" />
+        Leaf
+      </label>
+      <button id="more_filters_button">More filters, please</button>
+    </form>
+  </div>
   <div class="loading">Loading filters…</div>
   <ul>
   </ul>
