Added character groups to the facts about a pile returned by the API, and added JavaScript so that a checkbox is created for each character group above the "More filters, please" button.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@275 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -2,18 +2,8 @@
   <div id="more_filters">
     Narrow your results by making selections below.
     <form>
-      <label for="leaf">
-        <input type="checkbox" name="leaf" value="leaf" />
-        Leaf
-      </label>
-      <label for="leaf">
-        <input type="checkbox" name="leaf" value="leaf" />
-        Leaf
-      </label>
-      <label for="leaf">
-        <input type="checkbox" name="leaf" value="leaf" />
-        Leaf
-      </label>
+      <div>
+      </div>
       <button id="more_filters_button">More filters, please</button>
     </form>
   </div>
