Wired up the "Get more filters" button (to a "not implemented" alert, for now).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@276 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -4,7 +4,7 @@
     <form>
       <div>
       </div>
-      <button id="more_filters_button">More filters, please</button>
+      <button>Get more filters…</button>
     </form>
   </div>
   <div class="loading">Loading filters…</div>
