Add dialog box for previewing a plant upon selecting it from the results. So far just show the scientific name.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@279 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -28,6 +28,7 @@
     </div>
   </div>
   {% include "simplekey/filters.html" %}
+  {% include "simplekey/plant_preview.html" %}
 {% endblock %}
 {% block js_bottom %}
   <script>
