--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -328,7 +328,62 @@ h3, h4, h5, h6 {
     background: transparent url(ajax-loader.gif) no-repeat;
 }
 
+#plant-preview {
+    background-color: #fff;
+    color: #000;
+    font-size: 0.8em;
+}
+
+#plant-preview h3 {
+    margin-bottom: 0.5em;
+    text-align: center;
+}
+
 #plant-preview #preview-intro {
     position: absolute;
     left: -2000px;
+}
+
+#plant-preview div.photos {
+    float: left;
+    font-size: 0.9em;
+    margin-bottom: 2em;
+    margin-right: 0.5em;
+    text-align: center;
+}
+
+#plant-preview div.photos p {
+    margin: 0;
+    padding: 0;
+}
+
+#plant-preview div.photos a {
+    padding: 0 1em;
+}
+
+#plant-preview dl {
+    padding: 0.5em;
+    float: right;
+}
+
+#plant-preview dt {
+    clear: left;
+    float: left;
+    font-weight: bold;
+    text-align: right;
+    width: 100px;
+}
+
+#plant-preview dt:after {
+    /*content: ":";*/
+}
+
+#plant-preview dd {
+    margin: 0 0 0 110px;
+    padding: 0 0 0.5em 0;
+}
+
+#plant-preview div.nav {
+    clear: both;
+    text-align: center;
 }
