--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -21,6 +21,11 @@
       <div class="clear">&nbsp;</div>
     </div>
     {% include "simplekey/filter_working.html" %}
+    <form id="results-display">
+      <label for="image-type-selector">Show:</label>
+      <select id="image-type-selector" name="image-type-selector">
+      </select>
+    </form>
     {% include "simplekey/plants.html" %}
     <div id="subway">
       <h2>Subway map</h2>
