Show images, with links for browsing them, in plant preview dialog box.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@297 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plant_preview.html
+++ b/gobotany/simplekey/templates/simplekey/plant_preview.html
@@ -3,8 +3,8 @@
       <p id="preview-intro">(this is intro text for screen readers)</p>
       <h3></h3>
       <div class="photos">
-          <img src="" alt="" height="150" width="150">
-          <p><a href="#">&lt; prev</a> <span>1 of 4</span>
+          <img>
+          <p><a href="#">&lt; prev</a> <span>? of ?</span>
              <a href="#">next &gt;</a></p>
       </div>
       <dl>
