First pass at some wiring of the 'Get more filters...' button
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@300 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -4,7 +4,7 @@
     <form>
       <div>
       </div>
-      <button>Get more filters…</button>
+      <button dojoType="dijit.form.Button">Get more filters…</button>
     </form>
   </div>
   <div class="loading">Loading filters…</div>
