Added "Clear" buttons next to Family and Genus so they are less annoying.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@301 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -12,6 +12,7 @@
                   dojoType="dijit.form.FilteringSelect"
                   autocomplete="true" value="sel">
           </select>
+          <button id="clear_family">Clear</button>
         </p>
       </form>
       <form id="genus_form">
@@ -20,6 +21,7 @@
                   dojoType="dijit.form.FilteringSelect"
                   autocomplete="true" value="sel">
           </select>
+          <button id="clear_genus">Clear</button>
         </p>
       </form>
       <div class="clear">&nbsp;</div>
