Added a modest JavaScript-powered subway map; removed old subway map.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@302 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -21,6 +21,12 @@
                >Give me more choices »</a></h2>
       </div>
     {% endif %}
+
+    <hr/>
+    <div>
+      <a href="/simple/map/"
+         >Advanced users — see clickable plant map</a>
+    </div>
 </div>
 
 <div id="simplekey-right-column">
@@ -35,7 +41,6 @@
 <div style="clear: both">&nbsp;</div>
 </div>
 
-    {% include "simplekey/subway.html" %}
     {% endblock %}
     {% block js_bottom %}
 
