Added a big glossary page to the simple key.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@304 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -10,4 +10,7 @@
     <p>
       <a href="1/">Start identifying!</a>
     </p>
+    <p>
+      <a href="glossary/">View the glossary</a>
+    </p>
 {% endblock %}
