Did basic pagination to the glossary page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@305 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/glossary.html
+++ b/gobotany/simplekey/templates/simplekey/glossary.html
@@ -1,6 +1,18 @@
 {% extends "simplekey/base.html" %}
 {% block content %}
 
+<ul id="glossary_pages">
+  {% for letter in letters %}
+    <li>
+      {% if letter = this_letter %}
+        <span class="chosen">{{ letter|upper }}</span>
+      {% else %}
+        <a href="{% url simplekey-glossary letter %}">{{ letter|upper }}</a>
+      {% endif %}
+    </li>
+  {% endfor %}
+</ul>
+
 <ul id="glossary">
   {% for term in glossary %}
     <li>
