--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -11,6 +11,6 @@
       <a href="1/">Start identifying!</a>
     </p>
     <p>
-      <a href="glossary/">View the glossary</a>
+      <a href="glossary/a/">View the glossary</a>
     </p>
 {% endblock %}
