Get more filters event was being triggered twice, this is now fixed.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@306 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -1,10 +1,10 @@
 <div id="filters" aria-live="polite" aria-relevant="additions removals">
   <div id="more_filters">
     Narrow your results by making selections below.
-    <form>
+    <form dojoType="dijit.form.Form" id="more_filters_form">
       <div>
       </div>
-      <button dojoType="dijit.form.Button">Get more filters…</button>
+      <button type="submit" dojoType="dijit.form.Button">Get more filters…</button>
     </form>
   </div>
   <div class="loading">Loading filters…</div>
