Get more filters button now disabled while loading.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@307 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filters.html
+++ b/gobotany/simplekey/templates/simplekey/filters.html
@@ -4,7 +4,7 @@
     <form dojoType="dijit.form.Form" id="more_filters_form">
       <div>
       </div>
-      <button type="submit" dojoType="dijit.form.Button">Get more filters…</button>
+      <button id="more_filters_button" type="submit" dojoType="dijit.form.Button">Get more filters…</button>
     </form>
   </div>
   <div class="loading">Loading filters…</div>
