--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>{% block title %}{% endblock %} - Plant Identifier - Go-Botany</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     {% block js_top %}{% endblock %}
-    <link rel="stylesheet" type="text/css" href="/static/reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/reset.css" />
     <link rel="stylesheet" type="text/css"
-          href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css">
+          href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css" />
     <link rel="stylesheet" 
           href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css" 
-          type="text/css" media="screen" title="Dijit Claro Style">
-    <link rel="stylesheet" href="/static/gobotany.css">
+          type="text/css" media="screen" title="Dijit Claro Style" />
+    <link rel="stylesheet" href="/static/gobotany.css" />
   </head>
   <body class="claro">
     <div id="content">
@@ -21,7 +23,7 @@
       {% block content %}{% endblock %}
       {% include "simplekey/footer.html" %}
     </div>
-    <script>
+    <script type="text/javascript">
     djConfig = { 
         isDebug: true,
         debugAtAllCosts:true,
