--- a/gobotany/simplekey/templates/simplekey/plant_preview.html
+++ b/gobotany/simplekey/templates/simplekey/plant_preview.html
@@ -3,7 +3,7 @@
       <p id="preview-intro">(this is intro text for screen readers)</p>
       <h3></h3>
       <div class="photos">
-          <img>
+          <img src="">
           <p><a href="#">&lt; prev</a> <span>? of ?</span>
              <a href="#">next &gt;</a></p>
       </div>
