Got slider labels to appear for the range of numbers.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@350 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -149,6 +149,10 @@ p {
     padding: 2em 0;
 }
 
+#filter-working .dijitSliderButtonContainerH {
+    padding: 0;
+}
+
 #plants {
     height: 350px;
     overflow: auto;
