Display key characteristics and notable exceptions on the pile group page. Adjust presentation of key characteristics and notable exceptions on the pile popup.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@354 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -2,6 +2,15 @@
 {% block content %}
   <div class="PilePage" id="pile-finder">
     <h1>The pilegroup: {{ pilegroup.name }}</h1>
+    
+    <h2>Key Characteristics</h2>
+    {{ pilegroup.key_characteristics|safe }}
+    
+    <h2>Notable Exceptions</h2>
+    {{ pilegroup.notable_exceptions|safe }}
+    
+    <hr>
+    
     <p>
       Which of the following best describes your plant?
     </p>
