Display key characteristics and notable exceptions for characters (replace former dummy values with real values from the database.)
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@355 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -312,11 +312,11 @@ ul#glossary li:nth-child(even) {
     font-size: 1.3em;
 }
 
-.PilePage h2 + ul, .KeyCharacteristics ul {
+.PilePage h2 + ul, .KeyCharacteristics ul, .NotableExceptions ul, .key-characteristics ul, .notable-exceptions ul {
     list-style: disc;
     margin-left: 24px;
 }
-.PilePage h2 + ol, .NotableExceptions ol {
+.PilePage h2 + ol, .KeyCharacteristics ol, .NotableExceptions ol, .key-characteristics ol, .notable-exceptions ol {
     list-style-type: decimal;
     margin-left: 32px;
 }
@@ -358,6 +358,10 @@ ul#glossary li:nth-child(even) {
 
 #search_results_list .excerpt {
     color: #070;
+}
+
+#results-display {
+    clear: left;
 }
 
 /* Dijit Claro overrides */
