--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -8,11 +8,11 @@
       <div class="info">
         <div class="info-sub">
           <h3>Key Characteristics</h3>
-          <p class="key-characteristics"></p>
+          <div class="key-characteristics"></div>
         </div>
         <div class="info-sub">
           <h3>Notable Exceptions</h3>
-          <p class="notable-exceptions"></p>
+          <div class="notable-exceptions"></div>
         </div>
         <div class="clear">&nbsp;</div>
         
