Persist URL to cookie whenever its hash changes. Add a link to the first page of the simple key to the last plant identification as saved in the cookie.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@359 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -13,4 +13,10 @@
     <p>
       <a href="glossary/a/">View the glossary</a>
     </p>
+    <p id="resume"></p>
+{% endblock %}
+{% block js_bottom %}
+  <script>
+    dojo.require('gobotany.sk.index');
+  </script>
 {% endblock %}
