--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -9,6 +9,7 @@
       <li><a href="canonical-images">Image Search</a></li>
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
+      <li><a href="characters/">Characters rankings in each pile</a></li>
       <li><a href="simple/">Simple Key app</a></li>
       <li id="tests-action">Run Tests (please run in dojo debug mode, see the buildout README.txt for more details)</li>
     </ul>
